--- a/notebooks/testing_reading_the_user_config.ipynb
+++ b/notebooks/testing_reading_the_user_config.ipynb
@@ -287,7 +287,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "vlmhyperbench-oZr1iLfQ-py3.10",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
